--- a/programming/database.html
+++ b/programming/database.html
@@ -40,6 +40,7 @@ DELETE FROM articles WHERE title = '' AND views = 0;
 </div>
 
 <div><h2>GraphQL</h2>
+	<a href="https://github.com/nodkz/conf-talks">статьи и презентации про GraphQL</a><br>
 	<a href="https://youtu.be/5h7zX45YPuQ">ApolloClient 3 — прощаемся с Redux, REST API и Relay - Павел Черторогов. 2020</a><br>
 	<a href="https://www.apollographql.com/">ApolloGraphQL.com</a><br>
 	<a href="https://relay.dev/"><img src="https://relay.dev/img/favicon.png" alt="relay"> relay.dev</a><br>
