--- a/programming/index.html
+++ b/programming/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="Description" content="programming languages">
-  <title>leonardas.proGramming</title>
+  <title>Программирование</title>
   <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
   <link rel="stylesheet" href="../CSS/style.css">
   <link rel="manifest" href="../manifest.webmanifest">
@@ -56,7 +56,7 @@ main [href*="github"] {
         
     <div class="logo"><a href="../" title="Home"><img src="../icons/favicon.ico" alt="home"></a></div>
 
-    <div><a>programming</a></div>
+    <div><a>Программирование</a></div>
 
     <div class="headDivTog"><a href="../programming/" title="programming"><img src="../icons/programing.png" alt="programming"> </a></div>
 
@@ -435,17 +435,36 @@ main [href*="github"] {
 <div>
     <h2>Bash</h2>
     <pre><code>
-cd E:\Users\Projects
-cd "E:\Users\Rust Projects"
+<a href="https://andreyex.ru/">andreyex</a>
+
 mkdir folder  // создаем папку
+
 ls  // смотреть содержимое папки
+
 cd .. //перейти в родительский каталог
 cd ./fileName //искать в текущем каталоге
+cd E:\Users\Projects
+cd "E:\Users\Rust Projects"
+
 cat fileName // view file
+
 mv fileName newName //rename
+
 sudo
+
 gzip -6 -c file.txt > file.txt.gz
+
 traceroute -q www.mit.edu
+
+vim fileName
+    i insert
+
+    "esc",':'
+    wq write,quite
+    q! quite without saving
+    "enter"
+
+ack // умный поиск
     </code></pre>
 </div>
 
@@ -453,9 +472,11 @@ traceroute -q www.mit.edu
     <a href="https://dart.dev/"><img src="https://dart.dev/assets/shared/dart/icon/64.png" alt="Dart"> Dart</a><br>
     <a href="https://www.youtube.com/playlist?list=PLC2cXbfcJ9qsLTvKJ8ENTu8X0l6xtGbk2">Программирование на Dart. 2017-19</a><br>
     <a href="https://flutter.dev">Flutter</a><br>
+    <a href="https://www.youtube.com/playlist?list=PLyaYkfwvXhRKjYAIO4_J_IcHtAXUR_1ci">Курс Flutter для начинающих. 2020</a><br>
     <a href="https://habr.com/ru/post/430918/">Про Flutter, кратко: Основы / Хабр</a><br>
     <a href="https://docs.google.com/presentation/d/1qUycUmwT1bk0dFY-kqvGk-tuGtQMj2g_HchUrWXrk3w/mobilepresent?slide=id.p">Как я изучал Flutter @gorniv</a><br>
-    <hr>
+</div>
+<div class="img32">
     <a href="https://idris-lang.org/"><img src="https://idris-lang.org/logo/logo-small.png" alt="idris-logo"> </a>
     <a href="https://github.com/edwinb/Idris2">Idris2</a>
     <a href="https://youtu.be/mOtKD7ml0NU" title="youtube">.</a>
