--- a/zdorovie/index.html
+++ b/zdorovie/index.html
@@ -96,7 +96,8 @@
   <a href="https://youtu.be/DA_S82oXEIc">ИКС-ПОВТОРЕНИЯ (X-reps)</a><br>
   <a href="https://youtu.be/30h1qSFaIag">FST-7</a><br>
   <a href="https://youtu.be/ahG-VDA2VQc">СИСТЕМА ПЛИНТОВИЧА</a><br>
-  <a href="https://youtu.be/cSQN6TDjAO4">РОСТх2 (Медленные Мышечные Волокна)</a>
+  <a href="https://youtu.be/cSQN6TDjAO4">РОСТх2 (Медленные Мышечные Волокна)</a><br>
+  <a href="https://www.youtube.com/playlist?list=PLRDwKTyY7Sd9zGUSHQBagdjYprb1JH4A4">3 простых движения</a><br>
 </div>
 
 <div>
