--- a/programming/react.html
+++ b/programming/react.html
@@ -27,6 +27,7 @@
     <a href="https://habr.com/en/post/269831/">С 0 до 1. Разбираемся с Redux</a><br>
     * <a href="https://youtu.be/YdYyYMFPa44">Redux. Полный Курс 2020</a><br>
     <a href="https://itvdn.com/ru/video/isomorphic-application">Изоморфные приложения на React</a><br>
+    <a href="https://youtu.be/6m950Hqr_eI">React и данные: Эффективные способы хранения и изменения стейта</a><br>
 </div>
 
 <div>
