--- a/programming/angular.html
+++ b/programming/angular.html
@@ -67,7 +67,7 @@ ng e2e
 ng add @angular/material
   </code></pre></div>
 
-<div><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html"><img src="https://www.typescriptlang.org/assets/images/icons/safari-pinned-tab.svg" alt="TypeScript" height="32px"></a> TypeScript<br>
+<div><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html"><img src="https://www.typescriptlang.org/icons/icon-48x48.png" alt="TypeScript" height="32px"></a> TypeScript<br>
   <a href="https://itvdn.com/ru/video/typescript-fundamentals">TypeScript Fundamentals Updated (2018)</a><br>
   <a href="https://itvdn.com/ru/video/typescriptfundamentals">TypeScript Fundamentals (2016)</a>
   <pre><code>
