--- a/13century/index.html
+++ b/13century/index.html
@@ -23,6 +23,7 @@
     <div><a>13й Век</a></div>
 
     <div class="headDivTog"><a href="../13century/" title=""><img src="../icons/medieval.png" alt=""></a></div>
+    <div class="headDivTog"><a href="#warband" title="">Warband</a></div>
     
     <div id="headerBar_toggle">
         <span></span>
