--- a/guitar/index.html
+++ b/guitar/index.html
@@ -65,6 +65,8 @@
     <a href=../guitar/Death_Voice_of_the_souls.txt target="_blank">Death - Voice of the souls (табулатура) </a><br>
     <a href="https://youtu.be/qa7guKV7IZs">Kirk Fletcher: Blues Masterclass</a><br>
     <a href="https://youtu.be/SpXYhLZDcuM">The Lonely Shepherd На гитаре + разбор</a><br>
+    <a href="https://vk.com/wall-64071408_2178">Texas Blues Alley - Jimi's Influence (+ tabs + jams)</a><br>
+    <a href="https://vk.com/wall-64071408_2175">Texas Blues Alley - BB's Influence (+ tabs +jams)</a><br>
   </div>
 </div>
 
