--- a/programming/css.html
+++ b/programming/css.html
@@ -14,14 +14,23 @@
     <a href="https://github.com/mrclay/minify">minify</a><br>
     <a href="http://uroki-css.ru">uroki-css</a><br>
     <a href="http://flexboxfroggy.com/">flexboxfroggy</a><br>
+    <a href="https://cssgridgarden.com/">cssgridgarden</a>
     <a href="http://gearmobile.github.io/web-development/pixel-perfect/">Pixel Perfect</a><br>
   </div>
   <div>
     <li><a href="https://whitepaper.tools"><img src="http://whitepaper.tools/favicon.ico" alt="whitepaper tools"> whitepaper.tools</a></li>
     <li><a href="https://reshadow.dev/"><img src="https://reshadow.dev/public/favicon/favicon.ico" alt="reshadow.dev" height="16px"> reshadow </a> . <a href="https://github.com/lttb/reshadow"></a></li>
     <li>cssinjs / styled components</li>
+    <li><a href="https://ru.bem.info/methodology/">bem.info</a></li>
     <a href="https://habr.com/ru/post/203440/">BEM (block element modifier)</a><br>
-    <li>CSS Modules , пропсы </li>
+    <li><a href="https://m.habr.com/ru/post/335244/">CSS Modules in React</a></li>
+    <li><a href="https://github.com/css-modules/css-modules">css-modules</a></li>
+    <pre><code>
+      /* select.js */
+import styles from "./select.css";
+
+console.log(styles.select, styles.loading);
+    </code></pre>
     <li><a href="http://htmlbook.ru/samcss/napisanie-effektivnogo-koda"><img src="http://htmlbook.ru/favicon.ico" alt="htmlbook"> Написание эффективного кода</a></li>
     <li><a href="http://htmlbook.ru/samcss/kaskadirovanie">Cascading</a></li>
     <li>шлюзы</li>
