--- a/programming/golang.html
+++ b/programming/golang.html
@@ -8,6 +8,7 @@
 		<a href="https://youtu.be/2fxNbhy2gt0">Плюсы и минусы Go</a>, <a href="https://ater.me/conf/techtrain2018.pdf">презентация</a><br>
 		<a href="https://itproger.com/course/one-lesson/14"> go за полчаса</a><br>
 		<a href="https://itvdn.com/ru/video/golang">Видео уроки Golang (ITVDN)</a><br>
+        <a href="https://geekbrains.ru/events/2287#">напишем на Go простой сканер погоды</a><br>
 		<a href="https://play.golang.org/">play.golang.org</a><br>
 		<a href="http://liteide.org/en/">liteIDE</a><br>
     <a href="https://www.youtube.com/channel/UCQBFSUV_BdxGCxeg9Th4EjQ/videos">Gopher School</a><br>
@@ -24,6 +25,9 @@
     <a href="https://youtu.be/rcvA5gSwj2o">“Go, please”: language server под микроскопом | Илья Данилкин, Авито. 2020</a><br>
     <a href="https://youtu.be/hKnWq4RmNKE">Работа с миграциями базы данных в Go | Тамара Веденина, Ozon.ru. 2020</a><br>
     <a href="https://youtu.be/mKT-bLdRGvQ">CI/CD для Go проектов на drone.io | Алик Хилажев, Marketplace Technologies. 2020</a><br>
+      TLA+/TLC: практичный инструмент формальной верификаций алгоритмов, который точно нужно знать всем гоферам.
+      Разрабатывать конкурентные системы сложно. Самые плохие ошибки закладываются в алгоритм, не находятся никакими тестами, и ждут своей уникальной последовательности событий, чтобы взорваться и всё испортить. Но находить такие ошибки можно, даже не написав ни строчки кода на Go — если воспользоваться методами формальной верификации. Один из таких методов — разработанный Лесли Лампортом формализм TLA+ и инструмент верификации TLC — идеально подходит верификации конкурентных систем на Go. Мы поговорим про TLA+/TLC, про PlusCal — транслируемый в TLA+ язык спецификации алгоритмов специально для инженеров
+      <br>
 	</div>
 
 <div>
