--- a/programming/index.html
+++ b/programming/index.html
@@ -63,6 +63,9 @@ main [href*="github"] {
     <div class="headDivTog"><a class="item">Языки программирования</a>
       <div>
 <div><a href="#c"><span>C</span></a></div>
+<div><a href="#typescript">
+    <img src="https://www.typescriptlang.org/assets/images/icons/favicon-32x32.png" alt="typescript">
+    <span>TypeScript</span></a></div>
 <div><a href="#javascript">
     <img src="../icons/js.svg" alt="javascript">
     <span style="color: #f7df1e">JavaScript</span></a></div>
@@ -221,6 +224,10 @@ main [href*="github"] {
 </ul></div>
 
 <div>
+    <a href="https://youtu.be/NmGGcarGnqU">Автостопом по фронтенду, или Эволюция фреймворков</a><br>
+    <a href="https://youtu.be/F2B_rvHwz0g">Эффективное тестирование верстки / Максим Соснов (СКБ Контур)</a><br>
+    <a href="https://www.youtube.com/playlist?list=PLfbxrJr-t5mn1fAypCWIVKass-X7ru0iR">FrontendConf Moscow 2019</a><br>
+    <a href="https://youtu.be/1rW6U8kjBQQ">Я.Субботник по разработке интерфейсов. лето2020</a><br>
     <a href="https://www.youtube.com/playlist?list=PLKaafC45L_SRoYnuEW5cgqHN-kpSTVfMs">Школа разработки интерфейсов 2019-2020</a><br>
     <a href="https://youtu.be/vCR-Ezx_ivI">SpeechKit в Яндекс.Облаке</a><br>
     <a href="https://youtu.be/1U4NrB9v9ZA">Я.Субботник по разработке интерфейсов. лето2019</a><br>
@@ -333,7 +340,7 @@ main [href*="github"] {
     <ul>
         <li><a href="https://material-ui.com">Material-UI</a></li>
         <li><a href="https://masonry.desandro.com/">Masonry</a></li>
-        <li><a href="https://materializecss.com">materialize-css</a></li>
+        <li><a href="https://materializecss.com"><img src="https://materializecss.com/res/materialize.svg" alt="materialize">materialize-css</a></li>
         <li><a href="https://www.muicss.com/">MUI</a></li>
         <li><a href="bootstrap.html" target="_blank"><img src="https://getbootstrap.com/docs/4.3/assets/img/favicons/apple-touch-icon.png" alt="Bootstrap"> Bootstrap</a></li>
         <li><a href="https://materialdesignicons.com/">materialdesignicons</a></li>
@@ -363,11 +370,13 @@ main [href*="github"] {
 
 <div class="img16">
     <h2>Hosting / Domain /<br> Deploy / DevOps</h2>
+    <a href="https://itvdn.com/ru/video/jenkins">jenkins</a><br>
     <a href="https://youtu.be/QXI1fWnfS7U">Практикум DevOps by Rebrain: Ansible</a><br>
     <a href="https://github.com/yaoweibin/nginx_upstream_check_module">nginx_upstream_check_module</a><br>
     <a href="https://www.youtube.com/playlist?list=PLVSuF-7tjVUgPSW-YAhrGjnShRsW9gA7_">знакомство с Kubernetes</a><br>
     <a href="https://youtu.be/QF4ZF857m44">Основы Docker. Большой практический выпуск .2020</a><br>
     <a href="https://youtu.be/bC-MUHhdiUk">Build, Deploy, CI – Сергей Гоголев, Сергей Жигалов</a><br>
+    <a href="https://youtu.be/WDYlSQSWVmU">DevOps-квартирник: Облачный карго-культ.</a><br>
     <a href="https://www.heroku.com/"><img src="https://brand.heroku.com/static/media/heroku-logo-stroke-gradient.bb410472.svg" alt="Heroku"> Heroku </a> . <a href="https://youtu.be/wG7hX8Np1Pg" title="деплой на heroku">.</a><br>
     DevOps: docker, CI/CD(Continuous Integration)<br>
     <a href="https://itvdn.com/ru/video/sitepublication">Публикация веб-сайта</a><br>
@@ -467,6 +476,7 @@ ack // умный поиск
     <a href="https://www.youtube.com/playlist?list=PLyaYkfwvXhRKjYAIO4_J_IcHtAXUR_1ci">Курс Flutter для начинающих. 2020</a><br>
     <a href="https://habr.com/ru/post/430918/">Про Flutter, кратко: Основы / Хабр</a><br>
     <a href="https://docs.google.com/presentation/d/1qUycUmwT1bk0dFY-kqvGk-tuGtQMj2g_HchUrWXrk3w/mobilepresent?slide=id.p">Как я изучал Flutter @gorniv</a><br>
+    <a href="https://youtu.be/qYzydKidbDQ">Flutter Day Russia</a><br>
 </div>
 <div class="img32">
     <a href="https://idris-lang.org/"><img src="https://idris-lang.org/logo/logo-small.png" alt="idris-logo"> </a>
