--- a/programming/javascript.html
+++ b/programming/javascript.html
@@ -12,6 +12,7 @@
   <a href="https://eloquentjavascript.net"><img src="https://eloquentjavascript.net/favicon.ico" alt="EJS"></a>
   <a href="https://skillbox.ru/media/code/javascript_glavnyy_instrument_frontend/"><img src="https://skillbox.ru/favicon.ico" alt="Skillbox"></a>
   <br><br>
+  <a href="https://youtu.be/i4O5Ej6CG7M">JavaScript - Part I: from beginner to expert (2020)</a>
   <a href="https://www.youtube.com/channel/UCIo6TsJzLVRGbRZxKzoNeFQ">MoscowJS</a><br>
   <a href="https://youtu.be/tAgVINdc_o0">Продвинутый JavaScript. ШРИ2020</a><br>
   <a href="https://youtu.be/2QAUAZ5qgJM">Функциональное программирование в мире JavaScript. ШРИ2020</a><br>
