--- a/programming/safety.html
+++ b/programming/safety.html
@@ -8,12 +8,14 @@
 	<a href="https://youtu.be/2gthjl2Lks4">Алексей Богачук – Безопасность: уязвимости вашего приложения.2017</a><br>
 	<a href="https://youtu.be/ENPL3QE1J7w">Что такое ФРОД атака и как от неё защититься?.2017</a><br>
 	<a href="https://www.youtube.com/playlist?list=PLdJo1XilUTZPbJ4wZdrC3JUqFmIBA3pvC">YaC 2018. Информационная безопасность</a><br>
+	<a href="https://youtu.be/DvhqzX0S3G4">SQL инъекции. Тестирование на проникновение, выявление, защита</a><br>
 </div>
 
 <div>
 	<a href="https://habr.com/ru/company/pt/blog/264599/">Человек — это главная уязвимость. Немного о социальной инженерии на PHDays V</a><br>
 	для регистраций отдельная почта test+random@gmail.com??<br>
 	<a href="https://html5sec.org">html5sec.org</a><br>
+	<a href="https://codernet.ru/media/Хакинг%3A%20искусство%20эксплойта%2C%202-е%20издание.%20Д.%20Эриксон/xaking_iskusstvo_eksplojta_2-e_izdanie.pdf">xaking_iskusstvo_eksplojta_2.pdf</a><br>
 </div>
 
 <div>
