--- a/programming/webpack.html
+++ b/programming/webpack.html
@@ -5,7 +5,8 @@
 <div id="links">
   <a href="https://webpack.js.org"><img src="https://webpack.js.org/e0b5805d423a4ec9473ee315250968b2.svg" alt=""></a><br>
   <a href="https://www.youtube.com/watch?v=eSaF8NXeNsA">webpack. Владилен Минин.2020</a><br>
-  <a href="https://www.youtube.com/watch?v=Tg8IVbvturM">Антон Кастрицкий</a> <br>
+  <a href="https://www.youtube.com/watch?v=Tg8IVbvturM">Антон Кастрицкий</a><br>
+  <a href="https://youtu.be/aiYkJOPD9v8">Стас Курилов — Глубокое погружение в webpack (2018)</a><br>
   <a href="https://yadi.sk/i/9oydqY8iwcY__A">Вебпак, вид сквозь монокль.pdf</a><br>
   <a href="https://github.com/tehcookies/bundlers-comparison/tree/master/webpack-advanced">webpack-advanced</a><br>
   yarn outdated //проверка пакетов на актуальность<br>
@@ -46,6 +47,8 @@ npm i -D webpack-bundle-analyzer
 npm i -S jquery
 
   npm install cache-loader style-loader css-loader sass-loader node-sass --save-dev
+
+npm run eject
 </code>
 webpack.config.js
 <code>
