--- a/sailing/index.html
+++ b/sailing/index.html
@@ -7,7 +7,7 @@
   <title>Sailing</title>
   <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
   <link rel="stylesheet" href="../CSS/style.css">
-  <link rel="manifest" href="../manifest.webmanifest">
+<!--  <link rel="manifest" href="../manifest.webmanifest">-->
   <link rel="stylesheet" href="../CSS/lb_style.css">
   <script src="../JS/main.js" type="module"></script>
   <script src="../JS/lazysizes.min.js" async=""></script>
@@ -208,6 +208,7 @@ nav > a { font-size: inherit }
 <div>
   <details>
     <summary>Ссылки</summary><div id="links" class="img16">
+<a href="https://sailingtime.ru/yahting-videouroki">yahting-videouroki</a><br>
 <a href="http://www.rusyf.ru" title="Всероссийская Федерация Парусного Спорта"><img src="https://rusyf.ru/assets/new/favicons/favicon-7b47a1a1bcad5e3feeac3e982f155f0a.ico"> ВФПС</a> <br>
 <a href="http://www.sailing.org" title="International Sailing Federation"><img src="http://www.sailing.org/favicon.ico"> ISAF</a> <br>
 <a href="http://rya.org.uk" title="Royal Yachting Association"><img src="https://www.rya.org.uk/_layouts/15/rya/styles/img/site-images/icons/favicon/favicon-16x16.png"> RYA</a> <br>
