--- a/sailing/sailboats/grunvald.html
+++ b/sailing/sailboats/grunvald.html
@@ -5,6 +5,18 @@
 	<a href="http://build-sailboats.jimdo.com/"><img src="https://u.jimdo.com/www400/o/sf94b807ca05a574b/img/favicon.png?t=1405124457"> build-sailboats</a> <br>
 	<a href="http://www.barque.ru/projects/1997/yacht_tender_anastasia"><img src="http://www.barque.ru/img/favicon.png"> barque.ru</a> <br>
 	<a href="https://www.youtube.com/channel/UCg-_lYeV8hBnDSay7nmphUA">Sampson Boat Co</a><br>
+    <a href="https://journal.tinkoff.ru/krugosvetka-na-yachte/?mindbox-click-id=d6911dd4-f7e5-4e03-afba-a1ef3852565f&utm_source=chemodan&utm_medium=email&utm_campaign=travel-49">Как я купил яхту и отправился в кругосветку</a><br>
+    Где искать яхту в интернете:<br>
+    <ul>
+        <li><a href="https://www.yachtall.com">yachtall</a></li>
+        <li><a href="https://www.theyachtmarket.com">theyachtmarket</a></li>
+        <li><a href="https://www.boat24.com">boat24</a></li>
+    </ul>
+    Yacht Registration:<br>
+    <ul>
+        <li><a href="https://www.rya.org.uk/sitecollectiondocuments/legal/Web%20Documents/Legal%20Leaflets/Members%20Advice/Bill%20of%20Sale/BILL%20OF%20SALE.pdf">RYA Bill of Sale</a></li>
+        <li><a href="https://www.delreg.com/yacht-registration-in-delaware.cfm">Yacht Registration in Delaware</a></li>
+    </ul>
 </div>
 
 <table border="0" cellpadding="5" cellspacing="0">
